# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: __init__.py  arg_parser.py  build_diff.py  diff.py  diff_output.py  file_parser.py  generate_diff.py  parser.py
gendiff/formatters/: format_diff.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_parser.py
tests/fixtures/: json_flat_result.txt  json_result.txt  json_tree_result.txt  result.json  tree_file1.yaml
